Refactor index.html with corrected Polish text
Updated content and formatting in index.html to improve readability and correct Polish text.

--- a/index.html
+++ b/index.html
@@ -8,32 +8,33 @@
 </head>
 <body>
     
-    <p><b><i><h1>co potrafie:</h1></p></b></i>
+    <p><b><i><h1>Co potrafię?</h1></p></b></i>
 
   
 
-<p><b><i>potrafie rysowac budynki aglomeracje miast martwa nature zgodnie z perspektywą.Równiez zaprojektowac proste pomieszczenia w programach.
-Lubie grac w tenisa srednio raz lub dwa razy w tygodni jednak w wakacje ze wzgledu na wieksza 
-liczbe czasu moge grac duzo wiecej i dluzej nawet codziennie.
-umiemtakze piec i gotowac 
-drozdzowki ciasta ciastka danie z kurczakiem
- na ostro itp. nastepnsa zecza ktora lubie jest matematyka i fizyka ogolnie przedmiony 
- scisle rowniez chemia ktora od 7 klasy wydaje mi sie niesamowicie ciekawa</p></b></i>
+<p><b><i>Potrafię rysować budynki, aglomeracje miast, martwą naturę zgodnie z perspektywą. Również zaprojektować proste pomieszczenia w programach.
+Lubię grać w tenisa, średnio raz lub dwa razy w tygodniu, jednak w wakacje ze względu na większą 
+liczbę czasu, mogę grać dużo więcej i dłużej, nawet codziennie.
+Umiem także piec i gotować 
+drożdżówki, ciasta, ciastka, dania z kurczakiem
+ na ostro itp. Następną rzeczą, którą lubię jest matematyka i fizyka, ogólnie przedmioty 
+ ścisłe, również chemia, która od 7 klasy wydaje mi się niesamowicie ciekawa.</p></b></i>
 
 
-<p><b><i><h1>co chcialabym sie nauczyc:</h1></p></b></i>
+<p><b><i><h1>Czego chciałabym się nauczyć?</h1></p></b></i>
 
 
-<p><b><i>chcialabym sie nauczyc rysowac proste linie(dla kogos moze glupio to brzmiec  jednak dla arhitekta jest to niesamowicie wazne) 
-podszkolic sie w rysowaniu arhitektory i cieniowaniu rowniez zalezy mi na nauce 
-podstaw programowania i wielu innych ciekawych zeczy o ktorych jesze nie wiem </p></b></i>
+<p><b><i>Chciałabym się nauczyć rysować proste linie (dla kogoś może głupio to brzmieć, jednak dla architekta jest to niesamowicie ważne). 
+Podszkolić się w rysowaniu architektury i cieniowaniu. Zależy mi również na nauce 
+podstaw programowania i wielu innych ciekawych rzeczach, o których jeszcze nie wiem.</p></b></i>
 
 
-<p><b><i><h1>co chce robic w przyszlosci:</h1> </p></b></i>
+<p><b><i><h1>Co chcę robić w przyszłości?</h1> </p></b></i>
 
 
-<p><b><i>chcialabym zostac informatykiem arhitektka lub inynierem programowania</p></b></i>
+<p><b><i>Chciałabym zostać informatykiem, architektką lub inżynierem programowania.</p></b></i>
 </body>
 </html>
 <img src="www.img" alt="">
+
 
