Update index.html to include centered image
Added an image to the center of the page and corrected HTML structure.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ podstaw programowania i wielu innych ciekawych rzeczach, o których jeszcze nie 
 <p><b><i>Chciałabym zostać informatykiem, architektką lub inżynierem programowania.</p></b></i>
 </body>
 </html>
-<img src="www.img" alt="">
+<center><img src="www.img" alt=""></center>
+
 
 
